--- a/_posts/2016-11-27-2016年总结.md
+++ b/_posts/2016-11-27-2016年总结.md
@@ -3,11 +3,10 @@ layout: post
 title: 2016年总结
 date: 2016-11-27 16:55:00
 updated: 2016-11-27 16:55:00
-categories: "blah-blah"
+tags: ["blah-blah"]
 ---
-
 　　唔，距2016年结束还有一个月，其实现在不是写总结的时候...这篇也没啥看的价值。
-<!--more-->
+<!-- more -->
 　　想到以前小学、初中那会总有周记这玩意可以写的，开始抄的也罢后来不知怎的，总有一堆话想写。而高中可忘记有没这回事了，但有时候觉着写着是挺爽的，虽然其实是在扯一堆并没什么用的东西，文采也不咋滴，觉着写得挺烂的，现在回想起来要是回去看曾经扯过什么狗屁不通的东西，应该会大肆嘲笑曾经的年少无知吧；但抄抄“关山难越，谁悲失路之人？”之类的名句装那个啥，貌似是挺爽的（雾
 
 　　但后来是渐渐少了，从没人看的微博到封闭的票圈，却偶尔还发着明明知道发了也没啥意义的东西，只能给自己打脸，被迫使那些看到的伙伴们不明所以。现在倒好，想转到博客来了，可是依旧其实没得写的哇。
@@ -27,4 +26,4 @@ categories: "blah-blah"
 
 　　总之，现在可能还不是时候，可一旦直接放弃了的话，不仅过去的一切都没意义了，也就直接宣告失败了啊；总之，出发啦/不要问那路在哪/迎风向前/是唯一的方法；总之，是时候继续前行了。
 
-    16.11.27 晴 微冷 16:55
+　　16.11.27 晴 微冷 16:55
